--- a/src/Kollarovic/Navigation/templates/MenuControl.latte
+++ b/src/Kollarovic/Navigation/templates/MenuControl.latte
@@ -8,7 +8,7 @@
 
 {define item}
 	{if $item->isActive() and (!$item->resource or $user->isAllowed($item->resource))}
-		<li n:class="$item->isCurrent() ? active, ($item->isOpen() or ($item->isDropdown() and $open)) ? open">
+		<li n:class="$item->isCurrent() ? $activeClass, $item->isOpen() ? $openClass, $item->isDropdown() ? $dropdownClass">
 			{include link, item}
 			<ul class="{$subclass}" n:if="$item->isDropdown() and ($deep>$level or $deep===TRUE) and ($item->isCurrent() or $item->isOpen() or $open)">
 				{var $level=$level+1}
