Added support for Ajax

--- a/src/Kollarovic/Navigation/templates/BreadcrumbControl.latte
+++ b/src/Kollarovic/Navigation/templates/BreadcrumbControl.latte
@@ -1,6 +1,6 @@
 <ol class="{$class}" n:if="$items" n:inner-foreach="$items as $item">
 	<li n:if="!$iterator->last">
-		<a href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
+		<a n:class="$ajax ? ajax" href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
 			<i n:if="$item->icon" class="fa fa-fw {$item->icon}"></i>{_$item->label}
 		</a>
 	</li>
