--- a/src/Kollarovic/Navigation/templates/SitemapControl.latte
+++ b/src/Kollarovic/Navigation/templates/SitemapControl.latte
@@ -1,5 +1,5 @@
 {define link}
-	<a href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
+	<a n:class="$ajax ? ajax" href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
 		{_$item->label}
 	</a>
 {/define}
