--- a/src/Kollarovic/Navigation/templates/MenuControl.latte
+++ b/src/Kollarovic/Navigation/templates/MenuControl.latte
@@ -1,6 +1,6 @@
 {var $level = 0}
 {define link}
-	<a href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
+	<a n:class="$ajax ? ajax" href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
 		<i n:if="$item->icon" class="fa fa-fw {$item->icon}"></i>
 		{_$item->label}
 	</a>
