--- a/src/Kollarovic/Navigation/templates/MenuControl.latte
+++ b/src/Kollarovic/Navigation/templates/MenuControl.latte
@@ -1,9 +1,9 @@
 {var $level = 0}
 
 {define link}
-	<a n:class="$ajax ? ajax" href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
-		<i n:if="$item->icon" class="fa fa-fw {$item->icon}"></i>
-		{_$item->label}
+	<a n:class="$ajax ? ajax" href="{$item->isUrl() ? $item->getLink() : $presenter->link($item->getLink(), $item->getLinkArgs())}">
+		<i n:if="$item->getIcon()" class="fa fa-fw {$item->getIcon()}"></i>
+		{_$item->getLabel()}
 		{if $item->getOption(label)}
 			<small class="label pull-right bg-{$item->getOption(labelColor, red)}">{$item->getOption(label)}</small>
 		{/if}
@@ -11,7 +11,7 @@
 {/define}
 
 {define item}
-	{if $item->isActive() and (!$item->resource or $user->isAllowed($item->resource))}
+	{if $item->isActive() and (!$item->getResource() or $user->isAllowed($item->getResource()))}
 		<li n:class="$item->isCurrent() ? $activeClass, $item->isOpen() ? $openClass, $item->isDropdown() ? $dropdownClass">
 			{include link, item}
 			<ul class="{$subclass}" n:if="$item->isDropdown() and ($deep>$level or $deep===TRUE) and ($item->isCurrent() or $item->isOpen() or $open)">
