--- a/src/Kollarovic/Navigation/templates/PanelControl.latte
+++ b/src/Kollarovic/Navigation/templates/PanelControl.latte
@@ -2,17 +2,17 @@
 {var $index=0}
 
 <div class="row" n:inner-foreach="$items as $item">
-	<div n:if="!$item->resource or $user->isAllowed($item->resource)" class="col-lg-3 col-xs-6">
+	<div n:if="!$item->getResource() or $user->isAllowed($item->getResource())" class="col-lg-3 col-xs-6">
 		{var $index = $index>8 ? 0 : $index}
 		<div class="small-box bg-{$colors[$index++]}">
 			<div class="inner">
-				<h3>{$item->value|noescape}&nbsp;</h3>
-				<p>{_$item->label}</p>
+				<h3>{$item->getValue()|noescape}&nbsp;</h3>
+				<p>{_$item->getLabel()}</p>
 			</div>
 			<div class="icon">
-				<i class="fa {$item->icon ? $item->icon : fa-file-text-o}"></i>
+				<i class="fa {$item->getIcon() ? $item->getIcon() : fa-file-text-o}"></i>
 			</div>
-			<a n:class="$ajax ? ajax,small-box-footer" href="{$item->isUrl() ? $item->link : $presenter->link($item->link, $item->linkArgs)}">
+			<a n:class="$ajax ? ajax,small-box-footer" href="{$item->isUrl() ? $item->getLink() : $presenter->link($item->getLink(), $item->getLinkArgs())}">
 				{_'Show'} <i class="fa fa-arrow-circle-right"></i>
 			</a>
 		</div>
